fix many quality options overflowing their parent div and spilling out

--- a/ui/src/Pages/VideoPlayer/Menus/Index.scss
+++ b/ui/src/Pages/VideoPlayer/Menus/Index.scss
@@ -35,6 +35,10 @@
     }
   }
 
+  .innerMenu {
+      overflow: hidden;
+  }
+
   .menu {
     display: flex;
     flex-direction: column;
